# pinocchio

./: CMakeLists.txt  Vagrantfile  provision.ps1  runcmake.ps1
.github/workflows/: ccpp.yml
benchmark/: CMakeLists.txt
bindings/python/: CMakeLists.txt
examples/: CMakeLists.txt
src/: CMakeLists.txt  macros.hpp
src/multibody/: model.hxx
src/multibody/liegroup/: liegroup-base.hpp
src/spatial/: inertia.hpp  symmetric3.hpp
src/utils/: timer.hpp
unittest/: CMakeLists.txt
