# 
# Copyright (c) 2015-2019 CNRS INRIA
# Copyright (c) 2015 Wandercraft, 86 rue de Paris 91400 Orsay, France.
# 

# ----------------------------------------------------
# --- C++ --------------------------------------------
# ----------------------------------------------------

IF(LUA5_FOUND)
  LIST(APPEND ${PROJECT_NAME}_PARSERS_SOURCES 
      parsers/lua/lua_tables.cpp
      parsers/lua.cpp
    )
ENDIF(LUA5_FOUND)

SET(${PROJECT_NAME}_SOURCES
  ${${PROJECT_NAME}_PARSERS_SOURCES}
)

# Create target
IF(${PROJECT_NAME}_SOURCES OR UNIX)
  # The target is a real library (.so, .dll)
  ADD_LIBRARY(${PROJECT_NAME} SHARED ${HEADERS} ${${PROJECT_NAME}_SOURCES})
  SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
  PKG_CONFIG_USE_DEPENDENCY(${PROJECT_NAME} eigen3)
  IF(URDFDOM_FOUND)
    PKG_CONFIG_USE_DEPENDENCY(${PROJECT_NAME} urdfdom)
  ENDIF(URDFDOM_FOUND)

  IF(HPP_FCL_FOUND)
    PKG_CONFIG_USE_DEPENDENCY(${PROJECT_NAME} hpp-fcl)
  ENDIF(HPP_FCL_FOUND)

  IF(LUA5_FOUND)
    PKG_CONFIG_USE_DEPENDENCY(${PROJECT_NAME} ${LUA5_PACKAGE})
  ENDIF(LUA5_FOUND)
ELSE(${PROJECT_NAME}_SOURCES OR UNIX)
  # The target is a header-only library
  ADD_LIBRARY(${PROJECT_NAME} INTERFACE)
  SET(TARGET_TYPE "INTERFACE")
ENDIF(${PROJECT_NAME}_SOURCES OR UNIX)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${TARGET_TYPE} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Boost_SERIALIZATION_LIBRARY})

IF(BUILD_WITH_COMMIT_VERSION)
  TAG_LIBRARY_VERSION(${PROJECT_NAME})
ENDIF(BUILD_WITH_COMMIT_VERSION)

ADD_HEADER_GROUP(HEADERS)
ADD_SOURCE_GROUP(${PROJECT_NAME}_SOURCES)

INSTALL(TARGETS ${PROJECT_NAME} 
        EXPORT ${TARGETS_EXPORT_NAME}
        DESTINATION lib)
